<resources>
    <string name="app_name">DroidHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_login">or Login</string>
    <string name="login">Login</string>
    <string name="or_sign_up">or Sign up</string>
    <string name="your_files">Your files</string>
    <string name="add_a_file">Add a file</string>
    <string name="file_name_goes_here">File name goes here</string>
    <string name="choose_file">Choose file</string>
    <string name="upload_file">Upload file</string>
    <string name="field_required">Field required.</string>
    <string name="invalid_email">Invalid Email.</string>
    <string name="password_length_error">Password should be at least 6 characters.</string>
    <string name="sign_out">Sign out</string>
    <string name="no_files_uploaded_yet">No files uploaded yet.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_info">Kindly enter your email address to receive a password reset link.</string>
</resources>